--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,8 @@
     "noFallthroughCasesInSwitch": true,
     /* 不允许switch的case语句贯穿*/
     "moduleResolution": "node",
+    "strictNullChecks": true, // 启用空检查
+    "noImplicitAny": true, // 不允许隐式的 any 类型
     /* 模块解析策略 */
     "typeRoots": [
       /* 要包含的类型声明文件路径列表*/
